# rt

./: .gitignore  CMakeLists.txt  README.md  hj.js  xmake.lua
inc/: color.h  forme.hpp  hit.hpp  perlinnoise.hpp  ray.h  utility.hpp  vector.hpp
modules/: color.cppm  perlinnoise.cppm  ray.cppm  utility.cppm  vector.cppm
src/: k.py  main.cpp
